<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".settings">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="?attr/actionBarTheme"
        app:popupTheme="@style/AppTheme.PopupOverlay" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/calendarSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/pacifico"
            android:text="@string/calendar_settings"
            android:textColor="@color/colorPrimary"
            android:textSize="30sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/calendarLifespan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/lemonada_light"
                android:padding="15dp"
                android:text="@string/calendar_lifespan"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/calendarLife"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="20dp"
                android:spinnerMode="dropdown" />
        </RelativeLayout>

        <TextView
            android:id="@+id/settingsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/pacifico"
            android:text="@string/notification_settings"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="30sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/VibrateTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/lemonada_light"
                android:padding="15dp"
                android:text="@string/vibrate"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp" />

            <Switch
                android:id="@+id/vibrate"
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="20dp"
                android:checked="false"
                android:thumbTint="@color/colorPrimary"
                tools:checked="false" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/SoundTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/lemonada_light"
                android:padding="15dp"
                android:text="@string/sound"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp" />

            <Switch
                android:id="@+id/sound"
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="20dp"
                android:thumbTint="@color/colorPrimary" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/Alarm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/lemonada_light"
                android:padding="15dp"
                android:text="@string/alarm"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/spinner4"
                android:layout_width="130dp"
                android:layout_height="50dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="20dp" />
        </RelativeLayout>

    </LinearLayout>


</LinearLayout>