<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffffff"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/myPlantsTextView"
        android:layout_width="142dp"
        android:layout_height="51dp"
        android:layout_marginStart="7dp"
        android:layout_marginLeft="7dp"
        android:fontFamily="@font/pacifico"
        android:text="@string/my_plants"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.014" />

    <SearchView
        android:layout_width="270dp"
        android:layout_height="42dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="174dp"
        android:layout_height="46dp"
        android:layout_marginStart="7dp"
        android:layout_marginLeft="7dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/pacifico"
        android:text="@string/plant_fact"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <RelativeLayout
        android:id="@+id/horizontalScrollView"
        android:layout_width="0dp"
        android:layout_height="115dp"
        android:layout_marginTop="50dp"
        android:scrollbars="none"
        app:layout_constraintBottom_toTopOf="@+id/divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cardView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/plant_list"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/background_background"
            android:fadingEdge="horizontal"
            android:orientation="horizontal"
            android:scrollbars="none"
            android:visibility="visible">

            <!--<android.support.v7.widget.CardView-->
            <!--android:layout_width="109dp"-->
            <!--android:layout_height="match_parent"-->
            <!--app:cardBackgroundColor="@drawable/background"-->
            <!--tools:layout_editor_absoluteX="151dp"-->
            <!--tools:layout_editor_absoluteY="558dp">-->

            <!--<ImageView-->
            <!--android:id="@+id/imageView"-->
            <!--android:layout_width="109dp"-->
            <!--android:layout_height="109dp"-->
            <!--android:background="@drawable/background"-->
            <!--app:srcCompat="@mipmap/ficus_foreground" />-->

            <!--<TextView-->
            <!--android:id="@+id/textView6"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginLeft="30dp"-->
            <!--android:layout_marginTop="95dp"-->
            <!--android:fontFamily="sans-serif-smallcaps"-->
            <!--android:text="Ficus"-->
            <!--android:textColor="@color/colorPrimaryDark"-->
            <!--android:textSize="18sp"-->
            <!--android:textStyle="bold" />-->

            <!--<Spinner-->
            <!--android:id="@+id/spinner"-->
            <!--android:layout_width="170dp"-->
            <!--android:layout_height="match_parent"-->
            <!--android:dropDownWidth="match_parent"-->
            <!--android:popupBackground="@color/colorPrimary"-->
            <!--android:spinnerMode="dropdown"-->
            <!--android:visibility="visible" />-->
            <!--</android.support.v7.widget.CardView>-->
        </android.support.v7.widget.RecyclerView>
    </RelativeLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="368dp"
        android:layout_height="1dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="175dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:background="@color/colorPrimary" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="366dp"
        android:layout_height="52dp"
        android:layout_marginStart="7dp"
        android:layout_marginLeft="7dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="7dp"
        android:layout_marginRight="7dp"
        android:text="85% of plant life is found in the ocean!"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <View
        android:id="@+id/divider2"
        android:layout_width="368dp"
        android:layout_height="1dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:background="@color/colorPrimary" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginLeft="7dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/pacifico"
        android:text="@string/care_calendar"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider2" />

    <Button
        android:id="@+id/button"
        android:layout_width="130dp"
        android:layout_height="29dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="4dp"
        android:background="@color/secondAccent"
        android:text="@string/expand_calendar"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="219dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="109dp"
        android:layout_height="115dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="55dp"
        android:visibility="visible"
        app:cardBackgroundColor="@color/background_background"
        app:cardElevation="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="95dp"
            android:fontFamily="sans-serif-smallcaps"
            android:text="Add a Plant"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="109dp"
            android:visibility="visible"
            app:srcCompat="@drawable/add_button" />
    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>